Add appointment scheduling features and user authentication updates
- Introduced MeResponse and DoctorAvailabilityResponse DTOs for user and doctor availability data.
- Updated Appointment and AppointmentRequest to use OffsetDateTime for time management.
- Enhanced PatientController and AppointmentController with new endpoints for managing appointments.
- Implemented MyAppointmentsList component for displaying user's appointments.
- Integrated AuthProvider for managing user authentication state.
- Modified Navbar to include login/logout functionality based on user state.
- Updated package.json to include new dependencies for date handling.
- The issue was a combo of CSRF tokens , context and this branch not being updated fully